# LambdaCalculus

./: BLC.hs  CHANGELOG.md  Data.hs  Evaluate.hs  LICENSE  Makefile  README.md  Test.hs  examples.hs  examples2.hs  lambda-calculus.cabal
lib/: Parse.hs
lib/Lambda/: Data.hs  Evaluate.hs  Parse.hs
